@@ -1,4 +1,5 @@
 // { dg-options "-finput-charset=ascii" }
 // { dg-do compile }
+// { dg-skip-if "non-ascii in system headers" { *-*-darwin10*  *-*-darwin[89]* } }
 
 #include <bits/extc++.h>
